--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -419,8 +419,6 @@
         ZIndex: =2
 
         com_InvHeader As com_Header:
-            BackToScreen: =scr_Entry
-            IsMobile: =isMobile
             LayoutMinHeight: =640
             LayoutMinWidth: =250
             Title: ="TEMELJNICE INVENTURE"
@@ -434,84 +432,26 @@
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
-            LayoutOverflowY: =LayoutOverflow.Scroll
             ZIndex: =3
 
-            Container4 As groupContainer.horizontalAutoLayoutContainer:
-                BorderThickness: =0.5
-                FillPortions: =0
-                Height: =50
-                LayoutAlignItems: =LayoutAlignItems.Stretch
-                LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
-                LayoutMinHeight: =50
-                LayoutMinWidth: =250
-                LayoutMode: =LayoutMode.Auto
-                PaddingBottom: =5
-                PaddingLeft: =5
-                PaddingRight: =5
-                PaddingTop: =5
+            txt_InvDocumentName As Text:
+                Align: ='TextCanvas.Align'.Start
+                AutoHeight: =false
+                DisplayMode: =DisplayMode.Edit
+                Height: =40
+                LayoutMinHeight: =40
+                LayoutMinWidth: =50
+                PaddingBottom: =0
+                PaddingLeft: =8
+                PaddingRight: =8
+                PaddingTop: =0
+                Size: =14
+                Text: ="Stavke dokumenta " & SelectedDocumentName
+                Width: =Parent.Width
+                Wrap: =true
+                X: =0   
+                Y: =0
                 ZIndex: =1
-
-                txt_InvDocumentName As Text:
-                    Align: ='TextCanvas.Align'.Start
-                    AutoHeight: =true
-                    DisplayMode: =DisplayMode.Edit
-                    FillPortions: =1
-                    Height: =Parent.Height
-                    LayoutMinHeight: =40
-                    LayoutMinWidth: =50
-                    PaddingBottom: =0
-                    PaddingLeft: =8
-                    PaddingRight: =8
-                    PaddingTop: =0
-                    Size: =14
-                    Text: ="Stavke dokumenta " & SelectedDocumentName
-                    Width: =Parent.Width
-                    Wrap: =true
-                    X: =0   
-                    Y: =0
-                    ZIndex: =1
-
-                "bcr_Inv_1 As 'Barcode Reader'":
-                    BarcodeType: ='BarcodeReader.BarcodeType'.Code128
-                    BorderFillColor: =RGBA(0, 0, 0, 1)
-                    BorderRadius: =10
-                    BorderThickness: =1
-                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                    DisabledContentColor: =RGBA(166, 166, 166, 1)
-                    DisabledFillColor: =RGBA(244, 244, 244, 1)
-                    DisplayMode: =DisplayMode.Edit
-                    FillColor: =RGBA(255, 255, 255, 1)
-                    FontSize: =12
-                    Height: =35
-                    HoverBorderColor: =RGBA(189, 49, 51, 1)
-                    HoverContentColor: =RGBA(255, 255, 255, 1)
-                    HoverFillColor: =RGBA(189, 49, 51, 1)
-                    LayoutMinHeight: =35
-                    LayoutMinWidth: =80
-                    OnCancel: =false
-                    OnScan: |-
-                        =Set(
-                            ScannedItem,
-                            First(Self.Barcodes).Value
-                        )
-                    PaddingBottom: =0
-                    PaddingLeft: =0
-                    PaddingRight: =0
-                    PaddingTop: =0
-                    PressedBorderColor: =RGBA(189, 49, 51, 1)
-                    PressedContentColor: =RGBA(189, 49, 51, 1)
-                    PressedFillColor: =RGBA(255, 255, 255, 1)
-                    ScanningMode: ='BarcodeReader.ScanningMode'.AutomaticallyScan
-                    Text: ="Skener"
-                    TextAlignment: =Align.Center
-                    TextColor: =RGBA(0, 0, 0, 1)
-                    VerticalAlign: =VerticalAlign.Middle
-                    Visible: =isMobile
-                    Width: =80
-                    X: =40
-                    Y: =15
-                    ZIndex: =2
 
             "glr_Inv As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -520,9 +460,9 @@
                     =LookUp(
                         colLines,
                         If(
-                            IsBlank(com_InvHeader.ScannedItem),
+                            IsBlank(ScannedItem),
                             newResEntryLineNo = 'Line_No.',
-                            Barcode = com_InvHeader.ScannedItem
+                            Barcode = ScannedItem
                         ),
                         ThisRecord
                     )
@@ -568,7 +508,7 @@
                 TemplateSize: =291
                 Visible: =!isLoading
                 Width: =Parent.Width
-                ZIndex: =3
+                ZIndex: =2
 
                 Icon2 As icon.Check:
                     BorderColor: =App.Theme.Colors.Darker40
@@ -948,7 +888,7 @@
                 Width: =200
                 X: =0
                 Y: =0
-                ZIndex: =4
+                ZIndex: =3
 
         hrz_InvFooter As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
