--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -19,6 +19,8 @@
             isModalOpen,
             false
         );
+        Clear(colLines);
+        Clear(colEntries);
         LoadData(
             lockedItems,
             "lockedItems",
