--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -104,6 +104,7 @@ com_Header As CanvasComponent:
                 ScanningMode: ='BarcodeReader.ScanningMode'.AutomaticallyScan
                 Text: ="Skener"
                 TextColor: =RGBA(255, 255, 255, 1)
+                Visible: =isMobile
                 Width: =100
                 X: =0
                 Y: =0
