--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -49,8 +49,8 @@ com_Header As CanvasComponent:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingBottom: =5
-            PaddingLeft: =5
-            PaddingRight: =5
+            PaddingLeft: =10
+            PaddingRight: =10
             PaddingTop: =5
             RadiusBottomLeft: =4
             RadiusBottomRight: =4
@@ -61,19 +61,24 @@ com_Header As CanvasComponent:
             ZIndex: =2
 
             btn_InvBack_1 As Button:
-                Align: =Align.Justify
+                Align: =Align.Left
+                AlignInContainer: =AlignInContainer.Center
                 Appearance: ='ButtonCanvas.Appearance'.Transparent
                 DisplayMode: =DisplayMode.Edit
-                Height: =32
+                Height: =20
                 Icon: ="ArrowLeft"
                 IconStyle: ='ButtonCanvas.IconStyle'.Filled
                 Layout: ='ButtonCanvas.Layout'.IconBefore
-                LayoutMinHeight: =32
+                LayoutMinHeight: =20
                 LayoutMinWidth: =96
                 OnSelect: =Navigate(scr_Entry, ScreenTransition.Fade);
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
                 Text: ="Nazad na početnu"
-                VerticalAlign: =""
-                Width: =170
+                VerticalAlign: ="middle"
+                Width: =145
                 X: =0
                 Y: =0
                 ZIndex: =1
