--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -21,6 +21,7 @@
         );
         Clear(colLines);
         Clear(colEntries);
+        Clear(lockedItems);
         LoadData(
             lockedItems,
             "lockedItems",
