--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -10,7 +10,7 @@
             colEntries,
             Blank()
         );
-    OnVisible: |
+    OnVisible: |-
         =Set(
             isLoading,
             true
@@ -25,7 +25,7 @@
                                 SelectedFile,
                                 SelectedFolder
                             ).response
-                        ).Sales_Header )
+                        ).Sales_Header)
                     }
                 ),
                 Notify(
@@ -93,158 +93,6 @@
                 }
             }
         );
-        /*ClearCollect(
-            colLines,
-            IfError(
-                ForAll(
-                    xmlData.Sales_Line As line,
-                    {
-                        Description: Text(line.Description),
-                        Document_No: Text(line.Document_No),
-                        Document_Type: Text(line.Document_Type),
-                        Item_No: Text(line.Item_No),
-                        Line_Amount: Text(line.Line_Amount),
-                        Line_Discount_Amount: Text(line.Line_Discount_Amount),
-                        Line_No: Text(line.Line_No),
-                        Location_Code: Text(line.Location_Code),
-                        Outstand_Quantity: Text(line.Outstand_Quantity),
-                        Posting_Group: Text(line.Posting_Group),
-                        'Qty-to_Invoice': Text(line.'Qty-to_Invoice'),
-                        'Qty-to_Ship': Text(line.'Qty-to_Ship'),
-                        Quantity: Text(line.Quantity),
-                        Res_Entry: IfError(
-                            ForAll(
-                                line.Res_Entry As entry,
-                                {
-                                    Created_By: Text(entry.Created_By),
-                                    Creation_Date: Text(entry.Creation_Date),
-                                    Entry_No: Text(entry.Entry_No),
-                                    Exp_Date: Text(entry.Exp_Date),
-                                    Exp_Receipt_Date: Text(entry.Exp_Receipt_Date),
-                                    Item_No: Text(entry.Item_No),
-                                    Item_Tracking: Text(entry.Item_Tracking),
-                                    LOT_No: Text(entry.LOT_No),
-                                    Location_Code: Text(entry.Location_Code),
-                                    Positive: Text(entry.Positive),
-                                    'Qty-to-Handle_Base': Text(entry.'Qty-to-Handle_Base'),
-                                    'Qty-to-Invoice_Base': Text(entry.'Qty-to-Invoice_Base'),
-                                    Quantity: Text(entry.Quantity),
-                                    Quantity_Base: Text(entry.Quantity_Base),
-                                    Quantity_Completed: Text(entry.Quantity_Completed),
-                                    Quantity_NewLOT: Text(entry.Quantity_NewLOT),
-                                    Res_Status: Text(entry.Res_Status),
-                                    Shipment_Date: Text(entry.Shipment_Date),
-                                    Source_ID: Text(entry.Source_ID),
-                                    Source_Ref_No: Text(entry.Source_Ref_No),
-                                    Source_SubType: Text(entry.Source_SubType),
-                                    Source_Type: Text(entry.Source_Type)
-                                }
-                            ),
-                            {
-                                Created_By: Text(line.Res_Entry.Created_By),
-                                Creation_Date: Text(line.Res_Entry.Creation_Date),
-                                Entry_No: Text(line.Res_Entry.Entry_No),
-                                Exp_Date: Text(line.Res_Entry.Exp_Date),
-                                Exp_Receipt_Date: Text(line.Res_Entry.Exp_Receipt_Date),
-                                Item_No: Text(line.Res_Entry.Item_No),
-                                Item_Tracking: Text(line.Res_Entry.Item_Tracking),
-                                LOT_No: Text(line.Res_Entry.LOT_No),
-                                Location_Code: Text(line.Res_Entry.Location_Code),
-                                Positive: Text(line.Res_Entry.Positive),
-                                'Qty-to-Handle_Base': Text(line.Res_Entry.'Qty-to-Handle_Base'),
-                                'Qty-to-Invoice_Base': Text(line.Res_Entry.'Qty-to-Invoice_Base'),
-                                Quantity: Text(line.Res_Entry.Quantity),
-                                Quantity_Base: Text(line.Res_Entry.Quantity_Base),
-                                Quantity_Completed: Text(line.Res_Entry.Quantity_Completed),
-                                Quantity_NewLOT: Text(line.Res_Entry.Quantity_NewLOT),
-                                Res_Status: Text(line.Res_Entry.Res_Status),
-                                Shipment_Date: Text(line.Res_Entry.Shipment_Date),
-                                Source_ID: Text(line.Res_Entry.Source_ID),
-                                Source_Ref_No: Text(line.Res_Entry.Source_Ref_No),
-                                Source_SubType: Text(line.Res_Entry.Source_SubType),
-                                Source_Type: Text(line.Res_Entry.Source_Type)
-                            }
-                        ),
-                        'Sell-to_Customer_No.': Text(line.'Sell-to_Customer_No.'),
-                        Type: Text(line.Type),
-                        Unit_Of_Measure: Text(line.Unit_Of_Measure),
-                        Unit_Price: Text(line.Unit_Price)
-                    }
-                ),
-                {
-                    Description: Text(xmlData.Sales_Line.Description),
-                    Document_No: Text(xmlData.Sales_Line.Document_No),
-                    Document_Type: Text(xmlData.Sales_Line.Document_Type),
-                    Item_No: Text(xmlData.Sales_Line.Item_No),
-                    Line_Amount: Text(xmlData.Sales_Line.Line_Amount),
-                    Line_Discount_Amount: Text(xmlData.Sales_Line.Line_Discount_Amount),
-                    Line_No: Text(xmlData.Sales_Line.Line_No),
-                    Location_Code: Text(xmlData.Sales_Line.Location_Code),
-                    Outstand_Quantity: Text(xmlData.Sales_Line.Outstand_Quantity),
-                    Posting_Group: Text(xmlData.Sales_Line.Posting_Group),
-                    'Qty-to_Invoice': Text(xmlData.Sales_Line.'Qty-to_Invoice'),
-                    'Qty-to_Ship': Text(xmlData.Sales_Line.'Qty-to_Ship'),
-                    Quantity: Text(xmlData.Sales_Line.Quantity),
-                    Res_Entry: IfError(
-                        ForAll(
-                            xmlData.Sales_Line.Res_Entry As entry,
-                            {
-                                Created_By: Text(entry.Created_By),
-                                Creation_Date: Text(entry.Creation_Date),
-                                Entry_No: Text(entry.Entry_No),
-                                Exp_Date: Text(entry.Exp_Date),
-                                Exp_Receipt_Date: Text(entry.Exp_Receipt_Date),
-                                Item_No: Text(entry.Item_No),
-                                Item_Tracking: Text(entry.Item_Tracking),
-                                LOT_No: Text(entry.LOT_No),
-                                Location_Code: Text(entry.Location_Code),
-                                Positive: Text(entry.Positive),
-                                'Qty-to-Handle_Base': Text(entry.'Qty-to-Handle_Base'),
-                                'Qty-to-Invoice_Base': Text(entry.'Qty-to-Invoice_Base'),
-                                Quantity: Text(entry.Quantity),
-                                Quantity_Base: Text(entry.Quantity_Base),
-                                Quantity_Completed: Text(entry.Quantity_Completed),
-                                Quantity_NewLOT: Text(entry.Quantity_NewLOT),
-                                Res_Status: Text(entry.Res_Status),
-                                Shipment_Date: Text(entry.Shipment_Date),
-                                Source_ID: Text(entry.Source_ID),
-                                Source_Ref_No: Text(entry.Source_Ref_No),
-                                Source_SubType: Text(entry.Source_SubType),
-                                Source_Type: Text(entry.Source_Type)
-                            }
-                        ),
-                        {
-                            Created_By: Text(xmlData.Sales_Line.Res_Entry.Created_By),
-                            Creation_Date: Text(xmlData.Sales_Line.Res_Entry.Creation_Date),
-                            Entry_No: Text(xmlData.Sales_Line.Res_Entry.Entry_No),
-                            Exp_Date: Text(xmlData.Sales_Line.Res_Entry.Exp_Date),
-                            Exp_Receipt_Date: Text(xmlData.Sales_Line.Res_Entry.Exp_Receipt_Date),
-                            Item_No: Text(xmlData.Sales_Line.Res_Entry.Item_No),
-                            Item_Tracking: Text(xmlData.Sales_Line.Res_Entry.Item_Tracking),
-                            LOT_No: Text(xmlData.Sales_Line.Res_Entry.LOT_No),
-                            Location_Code: Text(xmlData.Sales_Line.Res_Entry.Location_Code),
-                            Positive: Text(xmlData.Sales_Line.Res_Entry.Positive),
-                            'Qty-to-Handle_Base': Text(xmlData.Sales_Line.Res_Entry.'Qty-to-Handle_Base'),
-                            'Qty-to-Invoice_Base': Text(xmlData.Sales_Line.Res_Entry.'Qty-to-Invoice_Base'),
-                            Quantity: Text(xmlData.Sales_Line.Res_Entry.Quantity),
-                            Quantity_Base: Text(xmlData.Sales_Line.Res_Entry.Quantity_Base),
-                            Quantity_Completed: Text(xmlData.Sales_Line.Res_Entry.Quantity_Completed),
-                            Quantity_NewLOT: Text(xmlData.Sales_Line.Quantity_NewLOT),
-                            Res_Status: Text(xmlData.Sales_Line.Res_Entry.Res_Status),
-                            Shipment_Date: Text(xmlData.Sales_Line.Res_Entry.Shipment_Date),
-                            Source_ID: Text(xmlData.Sales_Line.Res_Entry.Source_ID),
-                            Source_Ref_No: Text(xmlData.Sales_Line.Res_Entry.Source_Ref_No),
-                            Source_SubType: Text(xmlData.Sales_Line.Res_Entry.Source_SubType),
-                            Source_Type: Text(xmlData.Sales_Line.Res_Entry.Source_Type)
-                        }
-                    ),
-                    'Sell-to_Customer_No.': Text(xmlData.Sales_Line.'Sell-to_Customer_No.'),
-                    Type: Text(xmlData.Sales_Line.Type),
-                    Unit_Of_Measure: Text(xmlData.Sales_Line.Unit_Of_Measure),
-                    Unit_Price: Text(xmlData.Sales_Line.Unit_Price)
-                }
-            )
-        );*/
         IfError(
             ForAll(
                 xmlData.Sales_Line As line,
@@ -412,94 +260,6 @@
                 )
             )
         );
-        /*
-        If(!IsBlank(SelectedFile),
-            IfError(
-                GetXML_Nalog_Za_Prodaju.Run(
-                    SelectedFile,
-                    SelectedFolder
-                ),
-                Notify(
-                    "Error occurred while Get request, check if file exists.",
-                    NotificationType.Error,
-                    5000
-                ),
-                UpdateContext({
-                    sales:
-                    GetXML_Nalog_Za_Prodaju.Run(
-                        SelectedFile,
-                        SelectedFolder
-                    )
-                })
-            );
-            UpdateContext({
-                sales_header:
-                ParseJSON(sales.sales_header)
-            });
-            UpdateContext({
-                sales_lines:
-                sales.sales_line
-            });
-            UpdateContext({
-                salesResEntry:
-                sales.res_entry
-            });
-            Clear(colSalesLines);
-            Clear(colSalesResEntries);
-            ForAll(
-                ParseJSON(sales_lines),
-                Collect(
-                    colSalesLines,
-                    {
-                        Document_Type: Value(ThisRecord.Document_Type),
-                        'Sell-to_Customer_No.': Text(ThisRecord.'Sell-to_Customer_No.'),
-                        Document_No: Text(ThisRecord.Document_No),
-                        Line_No: Value(ThisRecord.Line_No),
-                        Type: Value(ThisRecord.Type),
-                        Item_No: Text(ThisRecord.Item_No),
-                        Location_Code: Text(ThisRecord.Location_Code),
-                        Posting_Group: Text(ThisRecord.Posting_Group),
-                        Description: Text(ThisRecord.Description),
-                        Unit_Of_Measure: Text(ThisRecord.Unit_Of_Measure),
-                        Quantity: Value(ThisRecord.Quantity),
-                        Unit_Price: Value(ThisRecord.Unit_Price),
-                        Line_Amount: Value(ThisRecord.Line_Amount),
-                        Line_Discount_Amount: Value(ThisRecord.Line_Discount_Amount),
-                        'Qty-to_Invoice': Value(ThisRecord.'Qty-to_Invoice'),
-                        'Qty-to_Ship': Value(ThisRecord.'Qty-to_Ship'),
-                        Outstand_Quantity: Value(ThisRecord.Outstand_Quantity)
-                    }
-                );
-            );
-            ForAll(
-                ParseJSON(salesResEntry),
-                Collect(
-                    colSalesResEntries,
-                    {
-                        Entry_No: Text(ThisRecord.Entry_No),
-                            Item_No: Text(ThisRecord.Item_No),
-                            Positive: Text(ThisRecord.Positive),
-                            Quantity: Value(ThisRecord.Quantity),
-                            Quantity_Base: Value(ThisRecord.Quantity_Base),
-                            Location_Code: Text(ThisRecord.Location_Code),
-                            Res_Status: Text(ThisRecord.Res_Status),
-                            Source_Type: Text(ThisRecord.Source_Type),
-                            Source_SubType: Text(ThisRecord.Source_SubType),
-                            Source_ID: Text(ThisRecord.Source_ID),
-                            Source_Ref_No: Text(ThisRecord.Source_Ref_No),
-                            Item_Tracking: Text(ThisRecord.Item_Tracking),
-                            LOT_No: Text(ThisRecord.LOT_No),
-                            Exp_Date: Text(ThisRecord.Exp_Date),
-                            Creation_Date: Text(ThisRecord.Creation_Date),
-                            Exp_Receipt_Date: Text(ThisRecord.Exp_Receipt_Date),
-                            Shipment_Date: Text(ThisRecord.Shipment_Date),
-                            Created_By: Text(ThisRecord.Created_By),
-                            'Qty-to-Handle_Base': Value(ThisRecord.'Qty-to-Handle_Base'),
-                            'Qty-to-Invoice_Base': Value(ThisRecord.'Qty-to-Invoice_Base')
-                        }            
-                )
-            );
-        );*/
         Set(
             isLoading,
             false
@@ -517,6 +277,26 @@
             )
         );
         UpdateContext({wizardStep: 1});
+        If(
+            IsEmpty(
+                Filter(
+                    lockedItems,
+                    ThisRecord.documentId = SelectedDocumentName
+                )
+            ),
+            Collect(
+                lockedItems,
+                ForAll(
+                    colEntries As entry,
+                    {
+                        documentId: SelectedDocumentName,
+                        lineId: entry.Source_Ref_No,
+                        entryId: entry.Entry_No,
+                        isLocked: false
+                    }
+                )
+            )
+        );
 
     con_ProModalFade As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
@@ -1313,14 +1093,26 @@
                     LayoutMinHeight: =244
                     LayoutMinWidth: =320
                     LoadingSpinner: =LoadingSpinner.Data
-                    OnSelect: |+
-                        =Set(
-                            isModalOpen,
-                            true
+                    OnSelect: |
+                        =If(
+                            LookUp(
+                                lockedItems,
+                                ThisRecord.documentId = SelectedDocumentName && ThisRecord.lineId = glr_ProLines.Selected.Line_No && glr_ProResEntries.Selected.Entry_No = ThisRecord.entryId,
+                                !ThisRecord.isLocked
+                            ),
+                            Set(
+                                isModalOpen,
+                                true
+                            );
+                            Set(
+                                QuantityCompleted,
+                                Abs(Value(glr_ProResEntries.Selected.Quantity_Completed))
+                            );
+                            Set(
+                                QuantityNewLot,
+                                Abs(Value(glr_ProResEntries.Selected.Quantity_NewLOT))
+                            )
                         );
-                        Set(QuantityCompleted, Abs(Value(glr_ProResEntries.Selected.Quantity_Completed)));
-                        Set(QuantityNewLot, Abs(Value(glr_ProResEntries.Selected.Quantity_NewLOT)));
-                        
                     TemplatePadding: =0
                     TemplateSize: =244
                     Width: =Parent.Width
